# MSc-Project-Network-Model-Rust-

./: Cargo.toml  README.md
model_analysis/: molloy_reed_dd.txt  random_graph_analysis.ipynb
model_input_files/: fitting_parameters.json  partitions.csv  rates_matrix.csv
model_output_files/: MR_dd_100k.csv  network_SBM1.json  secondary_cases_SBM1.csv  secondary_cases_SBM2.csv  secondary_cases_config1.csv  secondary_cases_config2.csv
src/: lib.rs  main.rs  multinomial_sample.rs  random_graphs.rs  run_model.rs  run_scenarios.rs  tau_leap.rs  useful_functions.rs  visualisation.rs  write_to_file.rs
visualisation/: Cargo.toml
visualisation/src/: example_configurable.rs  lib.rs  main.rs  settings.rs
