[package]
name = "networks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
random_choice = "0.3.2"
rand = "0.8.5"
rand_distr = "0.4.3"
csv = "1.2.2"
nalgebra-sparse = "0.9.0"
rayon = "1.7.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
egui_graphs = "0.5.3"
eframe = "0.22.0"
petgraph = "0.6.3"
egui = "0.22.0"
